--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
              <input type="number" id="cambioEuro" placeholder="Insira o valor do câmbio para Euros">
              <br>
              <input type="number" id="cambioPalms" placeholder="Insira o valor do câmbio para Palms">
-             <button id="convertBtn" type="button">Converter</button>
+             <button id="convertBtn" type="button" onclick="converter">Converter</button>
              <br>
              <label for="valorDolar">Dólar:</label>
-             <input type="number" id="valorDolar" disabled>
+             <input type="text" id="valorDolar" disabled>
              <br>
              <label for="valorEuro">Euro:</label>
              <input type="number" id="valorEuro" disabled>
@@ -58,7 +58,7 @@
 
 
 
-    <script src="script.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
