--- a/index.html
+++ b/index.html
@@ -20,45 +20,27 @@
             <form>
                 <label for="info">Insira os valores e cambios</label>
                 <br>
-             <input type="number" id="valorReal" placeholder="Insira o valor em reais">
+             <input type="number" id="valor_real" placeholder="Insira o valor em reais">
              <br>
-             <input type="number" id="cambioDolar" placeholder="Insira o valor do câmbio para Dólares">
+             <input type="number" id="cambio_dolar" placeholder="Insira o valor do câmbio para Dólares">
              <br>
-             <input type="number" id="cambioEuro" placeholder="Insira o valor do câmbio para Euros">
+             <input type="number" id="cambio_euro" placeholder="Insira o valor do câmbio para Euros">
              <br>
-             <input type="number" id="cambioPalms" placeholder="Insira o valor do câmbio para Palms">
-             <button id="convertBtn" type="button" onclick="converter">Converter</button>
+             <input type="number" id="cambio_palm" placeholder="Insira o valor do câmbio para Palms">
+             <input id="converter_btn" type="button" value="Converter"></input>
              <br>
-             <label for="valorDolar">Dólar:</label>
-             <input type="text" id="valorDolar" disabled>
+             <label for="valor_dolar">Dólar:</label>
+             <input type="text" id="valor_dolar" disabled>
              <br>
-             <label for="valorEuro">Euro:</label>
-             <input type="number" id="valorEuro" disabled>
+             <label for="valor_euro">Euro:</label>
+             <input type="number" id="valor_euro" disabled>
              <br>
-             <label for="valorPalm">Palm</label>
-             <input type="number" id="valorPalm" disabled>
+             <label for="valor_palm">Palm</label>
+             <input type="number" id="valor_palm" disabled>
             </form>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    <script type="text/javascript" src="script.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
