--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
              <input type="number" id="cambio_palm" placeholder="Insira o valor do câmbio para Palms">
              <input id="converter_btn" type="button" value="Converter"></input>
              <br>
-             <label for="valor_dolar">Dólar:</label>
+             <label for="valorDolar">Dólar:</label>
              <input type="text" id="valor_dolar" disabled>
              <br>
-             <label for="valor_euro">Euro:</label>
+             <label for="valorEuro">Euro:</label>
              <input type="number" id="valor_euro" disabled>
              <br>
-             <label for="valor_palm">Palm</label>
+             <label for="valorPalm">Palm</label>
              <input type="number" id="valor_palm" disabled>
             </form>
         </div>
