--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="number" id="cambio_euro" placeholder="Insira o valor do câmbio para Euros">
                 </div>
                 <div class="mb-3">
-                    <input type="number" id="cambio_palm" placeholder="Insira o valor do câmbio para Palms">
+                    <input type="number" id="cambio_libra" placeholder="Insira o valor do câmbio para Libras">
                 </div>
                 <input id="converter_btn" type="button" value="Converter"></input>
                 <div class="mb-3">
@@ -38,11 +38,11 @@
                 </div>
                 <div class="mb-3">
                     <label for="valorEuro">Euro:</label>
-                    <input type="number" id="valor_euro" disabled>
+                    <div class="alert alert-success" style="display: none" role="alert" id="valor_euro"></div>
                 </div>
                 <div class="mb-3">
-                    <label for="valorPalm">Palm</label>
-                    <input type="number" id="valor_palm" disabled>
+                    <label for="valorLibra">Libra</label>
+                    <div class="alert alert-success" style="display: none" role="alert" id="valor_libra"></div>
                 </div>
             </form>
         </div>
